--- a/Missions_to_Mars/index.html
+++ b/Missions_to_Mars/index.html
@@ -10,17 +10,84 @@
 </head>
 
 
-<body> 
-        <nav class="navbar navbar-expand-sm bg-light justify-content-center">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Scrape More Data</a>
-                  </li>
-    
-                  <div class="jumbotron text-center">
-                        <h1> Mission to Mars </h1>
-                      </div>
-            <div class="col-sm-4">
-                <h2> Latest Mars News</h2>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Mission to Mars</title>
+
+</head>
+
+<body>
+
+      <h1>Mission to Mars</h1>
+
+        <p>
+          Mars Web Scraping
+        </p>
+      </div>
+    </div>
+
+          <h2>This is the latest Mars news.</h2>
+          <h4> {{ mars.news_title }}</h4>
+          <p> {{mars.summary}} </p>
+        </div>
+      </div>
+    </div>
+
+
+          <h2>This is the featured image from JPL.</h2>
+          <img src="{{mars.featured_image_url}}" alt="Mars featured image" />
+        </div>
+
+              <h3>The current weather on Mars</h3>
+              <p>
+                {{mars.tweets}}
+              </p>
+            </div>
+          </div>
+
+            <h3>Mars facts</h3>
+            {{mars.tables}}
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+        <h1>Mars Hemispheres</h1>
+
+
+            <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.mars_hemis[0]['title']}}</h3>
+          </div>
+            <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.mars_hemis[1]['title']}}</h3>
+          </div>
+        </div>
+
+
+            <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.mars_hemis[0]['title']}}</h3>
+          </div>
+            <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.mars_hemis[1]['title']}}</h3>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+
+  </div>
+
 </body>
+
+</html>
