--- a/Missions_to_Mars/index.html
+++ b/Missions_to_Mars/index.html
@@ -28,65 +28,46 @@
         <p>
           Mars Web Scraping
         </p>
-      </div>
-    </div>
-
+        <div>
           <h2>This is the latest Mars news.</h2>
-          <h4> {{ mars.news_title }}</h4>
-          <p> {{mars.summary}} </p>
+          <h4> {{ mars.news_titles}}</h4>
+          <p> {{mars.summarys}} </p>
         </div>
-      </div>
-    </div>
-
-
+        <div>
           <h2>This is the featured image from JPL.</h2>
-          <img src="{{mars.featured_image_url}}" alt="Mars featured image" />
-        </div>
+          <img src="{{mars.featured_img}}" alt="Mars featured image" />
 
               <h3>The current weather on Mars</h3>
               <p>
-                {{mars.tweets}}
+                {{mars.Weather}}
               </p>
-            </div>
           </div>
 
+          <div>
             <h3>Mars facts</h3>
             {{mars.tables}}
           </div>
-        </div>
-
-      </div>
-
-    </div>
-
+ 
+        <div>
         <h1>Mars Hemispheres</h1>
-
-
-            <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.mars_hemis[0]['title']}}</h3>
-          </div>
-            <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.mars_hemis[1]['title']}}</h3>
-          </div>
         </div>
-
-
+          <div>
             <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.mars_hemis[0]['title']}}</h3>
+            <h3>{{mars.hempispher_image[0]['title']}}</h3>
           </div>
+          <div>
             <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.mars_hemis[1]['title']}}</h3>
+            <h3>{{mars.hempispher_image[1]['title']}}</h3>
           </div>
-        </div>
 
-
-      </div>
-    </div>
-  </div>
-  </div>
-  </div>
-
-  </div>
+          <div>
+            <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hempispher_image[0]['title']}}</h3>
+          </div>
+          <div>
+            <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hempispher_image[1]['title']}}</h3>
+          </div>
 
 </body>
 
